fix: raw alignment

--- a/src/pages/EnglishPuzzle/components/Puzzle/Puzzle.scss
+++ b/src/pages/EnglishPuzzle/components/Puzzle/Puzzle.scss
@@ -127,6 +127,7 @@
     justify-content: center;
     position: relative;
     margin-top: 20px;
+    margin-left: 45px;
     font-size: 20px;
     color: #000;
     font-weight: 700;
